# ARDA_Stud_Manager

./: .gitignore  AuthUser.cpp  AuthUser.h  CMakeLists.txt  ContestWindow.ui  CurrentVersionApplication.h  Data.cpp  Data.h  DataHandler.h  FileChooicer.cpp  FileChooicer.h  IODataHandler.cpp  IODataHandler.h  JsonKeys.h  LICENSE  Loader.cpp  Loader.h  Logger.cpp  Logger.h  LogicOperation.cpp  LogicOperation.h  ModeSerelization.h  ModeValidator.h  README.md  Serializer.cpp  Serializer.h  Student.cpp  Student.h  StudentDataHandler.cpp  StudentDataHandler.h  Validator.cpp  Validator.h  academicrecordwindow.cpp  academicrecordwindow.h  academicrecordwindow.ui  accountingassessments.cpp  accountingassessments.h  accountingassessments.ui  add_lesson_schedule_dialog.cpp  add_lesson_schedule_dialog.h  (+98 more)
ContestCore/: AttestatContest.cpp  AttestatContest.h  Contest.h  ContestManager.cpp  ContestManager.h  ContestResult.h  StudentWriterResult.cpp  StudentWriterResult.h  TopBallContest.cpp  TopBallContest.h  contestwindow.cpp  contestwindow.ui  dialogcontest.cpp  dialogcontest.h  dialogcontest.ui
FileManagerCore/: addedobjectfiles.cpp  addedobjectfiles.h  addedobjectfiles.ui  apfs.cpp  apfs.h  apfs.ui  backup.cpp  backup.h  backup.ui  createfiledialog.cpp  createfiledialog.h  createfiledialog.ui  filemanagerdialog.cpp  filemanagerdialog.h  filemanagerdialog.ui  managerfs.cpp  managerfs.h  managerfs.ui  movefile.cpp  movefile.h  movefile.ui
IOCore/: IODataHandler.cpp  IODataHandler.h  iodatabasehandler.cpp  iodatabasehandler.h.bLpToT
LessonsCore/: academicrecordwindow.cpp  academicrecordwindow.h  accountingassessments.cpp  accountingassessments.h  accountingassessments.ui  coursework.cpp  coursework.h  coursework.ui  diploma.cpp  diploma.h  diploma.ui  project.cpp  project.h  recordbook.cpp  recordbook.h  recordbook.ui  texpanel.ui
ManagerDataCore/: Data.cpp  Data.h  addfullinfostudent.cpp  addfullinfostudent.cpp.toVeta  addfullinfostudent.h  addfullinfostudent.ui  extradata.cpp  extradata.h  extradatadialog.cpp  extradatadialog.h  extradatadialog.ui  passport.cpp  passport.h  passportdialog.cpp  passportdialog.h  passportdialog.ui
NotificationCORE/: addwork.cpp  addwork.h  addwork.ui  assignmentplanner.cpp  assignmentplanner.h  assignmentplanner.ui  notificationmanager.cpp  notificationmanager.h  notificationmanager.ui  priviewworks.cpp  priviewworks.h  priviewworks.ui  telegramnotifier.cpp  telegramnotifier.h
StudentManagerCore/: ManagerStudent.cpp  ManagerStudent.h  Student.h  addstudentdialog.cpp  addstudentdialog.h  addstudentdialog.ui  deletestudentdialog.cpp  deletestudentdialog.h  deletestudentdialog.ui  findstudentdialog.cpp  findstudentdialog.h  findstudentdialog.ui  priviewstudentdialog.cpp  priviewstudentdialog.h  priviewstudentdialog.ui  sortstudentdialog.cpp  sortstudentdialog.h  sortstudentdialog.ui  studentdataservice.cpp  studentdataservice.h  studentdataservice.ui
ico/: icon.xcf
include/: AttestatContest.h  BuildForm.h  Contest.h  ContestManager.h  ContestResult.h  FileChooicer.h  Libs.h  Loader.h  Logger.h  LogicOperation.h  ManagerStudent.h  Serializer.h  Student.h  StudentWriterResult.h  StudntFileMnager.h  TopBallContest.h  Validator.h  lessons.h
include/ContestCore/: Contest.h  ContestManager.h  ContestResult.h  EgeContest.h  Loader.h  StudentWriterResult.h  TopBallContest.h
includeWindow/: DynamicFormDialog.h  authregwindow.h  contestwindow.h  dialogcontest.h  mainwindow.h  studentdataservice.h  windowsmanagerstudent.h
src/: AttestatContest.cpp  AuthUser.cpp  BuildForm.cpp  Contest.cpp  ContestManager.cpp  EgeContest.cpp  FileChooicer.cpp  Loader.cpp  Logger.cpp  LogicOperation.cpp  ManagerStudent.cpp  Serializer.cpp  Student.cpp  StudentWriterResult.cpp  StudntFileMnager.cpp  TopBallContest.cpp  Validator.cpp  lessons.cpp
src/CoreCppContest/: AttestatContest.cpp  ContestManager.cpp  EgeContest.cpp  Loader.cpp  StudentWriterResult.cpp  TopBallContest.cpp
srcWindow/: DynamicFormDialog.cpp  authregwindow.cpp  contestwindow.cpp  dialogcontest.cpp  mainwindow.cpp  studentdataservice.cpp  windowsmanagerstudent.cpp
styles/: appstyle.qss
ui/: contestwindow.ui  dialogcontest.ui  mainwindow.ui  studentdataservice.ui
